# Campus-Resource-Hub-V-2.0

./: .pre-commit-config.yaml  DEBUG_LOGIN_FLOW.md  DEPLOYMENT.md  DOCKER_QUICK_START.md  FINAL_IMPLEMENTATION.md  FIX_LOGIN_REDIRECT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  KILL_FLASK_SERVERS.md  LOGIN_CORS_FIX.md  docker-compose.yml  package-lock.json  pyproject.toml  temp.jsx
.github/workflows/: tests.yml
Campus_Resource_hub/: .env  Dockerfile  nginx.conf  package-lock.json  package.json
Campus_Resource_hub/src/: App.tsx  index.css  main.tsx
Campus_Resource_hub/src/api/: client.ts  index.ts  types.ts
Campus_Resource_hub/src/api/services/: adminService.ts  authService.ts  bookingsService.ts  messagesService.ts  reviewsService.ts
Campus_Resource_hub/src/components/: ProtectedRoute.tsx
Campus_Resource_hub/src/components/auth/: AuthLayout.tsx  AuthToggle.tsx  LoginCard.tsx  SignUpCard.tsx  index.tsx
Campus_Resource_hub/src/components/modals/: BookingFormModal.tsx  ResourceDetailModal.tsx  ResourceFormModal.tsx  (+1 more)
Campus_Resource_hub/src/contexts/: AuthContext.tsx
Campus_Resource_hub/src/styles/: designTokens.css
Campus_Resource_hub_login/: .env  README.md  index.html  package-lock.json  package.json
Campus_Resource_hub_login/src/: AUTHENTICATION_DESIGN_SYSTEM.md  App.tsx  ENTERPRISE_IMPROVEMENTS.md  index.css
Campus_Resource_hub_login/src/api/: client.ts
Campus_Resource_hub_login/src/components/: Alert.tsx  AuthLogin.tsx  AuthSignUp.tsx
Campus_Resource_hub_login/src/imports/: CampusResourceHubAdminPanel.tsx  svg-dmqc24sl3e.ts
Campus_Resource_hub_login/src/styles/: globals.css
backend/: .env  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  ROADMAP.md  __init__.py  app.py  config.py  create_admin.py  dev.db  extensions.py  init_db.py  pytest.ini  requirements.txt  run_all_tests.sh  run_security_tests.sh  test_auth.sh  test_auth_simple.py  test_booking_debug.py  test_resource_debug.py
backend/data_access/: __init__.py  booking_repository.py  message_repository.py  resource_repository.py  review_repository.py  user_repository.py
backend/middleware/: __init__.py  auth.py
backend/models/: __init__.py  booking.py  message.py  resource.py  review.py  user.py
backend/routes/: __init__.py  admin.py  auth.py  bookings.py  health.py  messages.py  resources.py  reviews.py
backend/services/: __init__.py  admin_service.py  auth_service.py  booking_service.py  message_service.py  resource_service.py  review_service.py
backend/tests/api/: __init__.py  test_admin_api.py  test_bookings_api.py  test_messages_api.py  test_resources_api.py  test_reviews_api.py
backend/tests/integration/: __init__.py  conftest.py  test_admin_workflows.py  test_concurrent_operations.py  test_user_workflows.py
backend/tests/security/: README.md  test_baseline_security.py  test_csrf_protection.py  test_input_validation.py  test_rate_limiting.py  test_secret_management.py  test_security_headers.py
backend/utils/: __init__.py  logger.py  secrets_validator.py  validators.py
docs/: API_SECURITY_GUIDE.md  FRONTEND_INTEGRATION_STRATEGY.md  LOGIN_PAGE_IMPROVEMENTS_COMPLETE.md  PHASE0_TASK1_CSRF_COMPLETE.md  PHASE0_TASK2_RATE_LIMITING_COMPLETE.md  PHASE0_TASK8_BASELINE_TESTS_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_PLAN.md  PHASE1_TASK1_RESOURCES_API_COMPLETE.md  PHASE1_TASK2_BOOKINGS_API_COMPLETE.md  PHASE1_TASK3_MESSAGES_API_COMPLETE.md  PHASE1_TASK4_REVIEWS_API_COMPLETE.md  PHASE1_TASK5_ADMIN_API_COMPLETE.md  PHASE1_TASK6_INTEGRATION_TESTS_COMPLETE.md  PHASE1_TASK7_API_DOCUMENTATION_COMPLETE.md  PHASE1_TASK8_TEST_COVERAGE_COMPLETE.md  PHASE2_AUTHENTICATION_FINAL_SUMMARY.md  PHASE2_PLAN.md  PHASE2_SUMMARY_AND_NEXT_STEPS.md  PHASE2_TASK1_API_CLIENT_COMPLETE.md  PHASE2_TASK2_AUTH_INFRASTRUCTURE_COMPLETE.md  PHASE2_TASK3_IMPLEMENTATION_PLAN.md  PHASE2_TASK3_RESOURCES_COMPLETE.md  PHASE2_TASK3_STATUS.md  PHASE2_TASK4_BOOKING_SYSTEM_COMPLETE.md  PHASE2_TASK5_API_GAPS_ANALYSIS.md  PHASE2_TASK5_MESSAGING_REVIEWS_COMPLETE.md  PHASE2_TASK5_MESSAGING_REVIEWS_STATUS.md  PHASE2_TASK6_ADMIN_ERROR_HANDLING_COMPLETE.md  PHASE2_TASK6_ADMIN_GAP_ANALYSIS.md  PHASE2_TASKS_1_2_UI_COMPLETE.md  PHASE3_LOGIN_FIXES.md  PHASE3_MANUAL_TESTING_GUIDE.md  PHASE3_PLAN.md  QUICK_FIX_REACT_ROUTER.md  TESTING_GUIDE.md  data_model_deltas.md  devops_readiness.md  gap_analysis.md  nfr_risk_register.md  (+3 more)
docs/api_surface/: OpenAPI.yaml
instance/: dev.db
migrations/versions/: b573ae6b2c8f_initial_migration_user_resource_booking_.py
(+24 files in other folders)
