[project]
name = "campus-resource-hub"
version = "1.0.0"
description = "Campus Resource Hub - University Resource Booking System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Campus Resource Hub Team"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | htmlcov
  | instance
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"

# Enable specific rule sets
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from
]

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "instance",
    "htmlcov",
]

# Per-file ignores
[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # Allow assert in tests

# isort configuration
[tool.ruff.isort]
known-first-party = ["backend"]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

# isort (standalone) configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/instance/*", "*/htmlcov/*"]

# Mypy type checker configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Exclude certain directories  
exclude = [
    'migrations',
    'tests',
    'instance',
    'htmlcov',
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
pythonpath = [".", "backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "security: Security-related tests",
    "api: API endpoint tests",
    "integration: End-to-end integration tests",
    "unit: Unit tests",
    "slow: Tests that take significant time",
    "smoke: Quick smoke tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/instance/*",
    "*/.pytest_cache/*",
    "*/htmlcov/*",
    "backend/test_*.py",
    "backend/*_debug.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "backend/htmlcov"

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "migrations", "instance"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
match = "(?!test_).*\\.py"
match_dir = "^(?!(\\.tox|migrations|instance|htmlcov|tests)).*"
